--- a/main.html
+++ b/main.html
@@ -10,7 +10,41 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+<form action="/submit" method="post">
+	<label for="name">Name</label>
+	<input type="text" id="name" placeholder="Name" required><br>
+	
+	<label for="email">Email</label>
+	<input type="email" id="email" placeholder="Email" required><br>
+	
+	<label for="gender_m">Male</label>
+	<input type="radio" id="gender_m" name="gender" required>
+	
+	<label for="gender_f">Female</label>
+	<input type="radio" id="gender_f" name="gender" required><br>
+	
+	<label for="laptop">Laptop Brands</label>
+	<select id="laptop">
+		<option>Apple</option>
+		<option>Asus</option>
+		<option>Acer</option>
+		<option>HP</option>
+	</select><br>
+	
+	<label for="age">Age</label>
+	<input type="number" id="age" required><br>
 
+	<label for="dob">Date of Birth</label>
+	<input type="date" id="dob" required><br>
+	
+	<label for="password">Password</label>
+	<input type="password" id="password" required><br>
+
+	<label for="portfolio">Portfolio</label>
+	<input type="url" id="portfolio"><br>
+	
+	<button type="submit">submit</button>
+</form>
 </body>
 
 </html>
